# win_app_ressource

./: Cargo.toml  README  build.rs
resources/: RCa05708  resources.res
src/: app.rs  controls.rs  file_dialog.rs  main.rs  window.rs
