[package]
name = "win_app_ressource"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
] }

winapi = { version = "0.3", features = [
    "winuser", 
    "libloaderapi", 
    "commdlg"
] }
